fix about page collapse

--- a/public/index.css
+++ b/public/index.css
@@ -132,9 +132,14 @@ div.admin-section {
   border-color: black;
 }
 
-.about-image {
+.about-image-container {
   float: right;
-  width: 300px;
+  height: 400px;
+  padding-top: 25px;
+}
+
+.about-image {
+  height: 300px;
   transform: rotate(90deg);
   border-radius: 0.5rem;
 }
